Upgrade dependencies and target java 17